feat: Now the session will have a startDate and endDate and will be repeated some days in a week. In the reservation, you can use an Occurence to reservate for some days or maybe just reservate for one day without an occurence
